--- a/contact.html
+++ b/contact.html
@@ -47,19 +47,11 @@
         </div>
         
     </header>
-    <section class="container-fluid">
-        <div class="row row-table">
-            <div class="col-md-8 bg-color-three-reasons section-column">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="section-heading uppercase">About Me</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <section>
+
     </section>
     <footer class="container-fluid">
-        <div class="row" id="footer-details">
+        <div class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
