--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Rosie</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
 <body>
@@ -53,6 +53,41 @@
                 <div class="row">
                     <div class="col">
                         <h3 class="section-heading uppercase">About Me</h3>
+                    </div>
+                    <div class="row">
+                        <div class="col-10 offset-1 offset-sm-o col-sm-4 col-md-6">
+                            <div class="row">
+                                <div class="col-2">
+                                    <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                                </div>
+                                <div class="col-10">
+                                    <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                    <p>I'm a skilled FulL Stack Developer with a wealth of diverse life and technical experience that I bring to every project.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-10 offset-1 offset-sm-o col-sm-4 col-md-6">
+                            <div class="row">
+                                <div class="col-2">
+                                    <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                                </div>
+                                <div class="col-10">
+                                    <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                    <p>I follow form and function.I know that the asthetics of effective design combined with application speed, security and reliability combine to create a great user experience.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-10 offset-1 offset-sm-o col-sm-4 col-md-6">
+                            <div class="row">
+                                <div class="col-2">
+                                    <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+                                </div>
+                                <div class="col-10">
+                                    <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                                    <p>I work quickly and effectively in getting things done.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
