--- a/resume.html
+++ b/resume.html
@@ -69,7 +69,7 @@
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
-                                <p>Full Stack Developer with a wealth of diverse skills.</p>
+                                <p>HTML5, CSS3, Javascript.</p>
                             </div>
                         </div>
                     </div>
@@ -80,12 +80,12 @@
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
-                                <p>I follow form and function. I know the asthetics of effective design and application. </p>
+                                <p>PythonS, Mango, Junga Bunga.</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row progress-section">
                     <div class="col">
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
