--- a/resume.html
+++ b/resume.html
@@ -54,9 +54,24 @@
                         <h3 class="history-heading uppercase">Work History</h3>
                    </div>
                </div>
-               <div class="timeline-item" data-dates="02/1998 - 04/2004">
-                   <h4>National College</h4>
-               </div>
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="02/1998 - 04/2004">
+                        <h4>National College of Engineering</h4>
+                        <p>Entry Level Trainee</p>
+                    </div>
+                    <div class="timeline-item" data-dates="04/2004 - 06/2008">
+                        <h4>GenZ Inc</h4>
+                        <p>Junior Developer</p>
+                    </div>
+                    <div class="timeline-item" data-dates="06/2008 - 06/2011">
+                        <h4>Zombie Inc</h4>
+                        <p>Software Engineer</p>
+                    </div>
+                    <div class="timeline-item" data-dates="06/2011 - Present">
+                        <h4>Boogle</h4>
+                        <p>Senior Developer</p>
+                    </div>
+                </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
